--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -4,18 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Applications of deep learning to automatic multitrack mixing are largely unexplored. 
-    This is partly due to the limited available data, coupled with the fact that such data is relatively unstructured and variable. 
-    To address these challenges, we propose a domain-inspired model with a strong inductive bias for the mixing task. 
-    We achieve this with the application of pre-trained sub-networks and weight sharing, as well as with a sum/difference stereo loss function. 
-    The proposed model can be trained with a limited number of examples, is permutation invariant with respect to the input ordering, 
-    and places no limit on the number of input sources. 
-    Furthermore, it produces human-readable mixing parameters, allowing users to manually adjust or refine the generated mix. 
-    Results from a perceptual evaluation involving audio engineers indicate that our approach generates mixes that outperform baseline approaches. 
-    To the best of our knowledge, this work demonstrates the first approach in learning multitrack mixing conventions from real-world data at the waveform level, 
-    without knowledge of the underlying mixing parameters.">
-    <meta name="author" content="Christian Steinmetz">
-    <title>Automatic multitrack mixing with a differentiable mixing console of neural audio effects</title>
+    <meta name="description" content="Webpage hosting audio examples.">
+    <meta name="author" content="Joseph T Colonel">
+    <title>Reverse Engineering a Mix</title>
     
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -28,17 +19,14 @@
     <div class="jumbotron jumbotron-fluid text-center">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="mt-5">Automatic multitrack mixing with a differentiable <br> mixing console of neural audio effects</h1>
+            <h1 class="mt-5">Reverse Engineering a Mix</h1>
             <hr>
             <p class="lead">
-                <a href="https://www.christiansteinmetz.com/">Christian Steinmetz</a>, 
-                <a href="http://www.jordipons.me/">Jordi Pons</a>, 
-                <a href="https://scholar.google.es/citations?user=7cVOyh0AAAAJ&hl=ca">Santiago Pascual</a>, 
-                <a href="https://joanserra.weebly.com/">Joan Serrà</a>
+                <a href="https://www.josephtcolonel.com/">Joseph T Colonel</a>, 
+                <a href="http://www.eecs.qmul.ac.uk/~josh/">Joshua Reiss</a>, 
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="https://arxiv.org/abs/2010.10291" type="button" class="btn btn-secondary">Paper</a>
-                <a href="https://github.com/csteinmetz1/pymixconsole" type="button" class="btn btn-secondary">Code (pymixconsole)</a>
+                <a href="https://scholar.google.com/citations?user=c0Y1VjwAAAAJ&hl=en" type="button" class="btn btn-secondary">Paper</a>
                 <a href="#" type="button" class="btn btn-secondary"></a>
               </div>
           </div>
@@ -50,38 +38,9 @@
             <h2>Abstract</h1>
             <hr>
             <p>
-                Applications of deep learning to automatic multitrack mixing are largely unexplored. 
-                This is partly due to the limited available data, coupled with the fact that such data is relatively unstructured and variable. 
-                To address these challenges, we propose a domain-inspired model with a strong inductive bias for the mixing task. 
-                We achieve this with the application of pre-trained sub-networks and weight sharing, as well as with a sum/difference stereo loss function. 
-                The proposed model can be trained with a limited number of examples, is permutation invariant with respect to the input ordering, 
-                and places no limit on the number of input sources. 
-                Furthermore, it produces human-readable mixing parameters, allowing users to manually adjust or refine the generated mix. 
-                Results from a perceptual evaluation involving audio engineers indicate that our approach generates mixes that outperform baseline approaches. 
-                To the best of our knowledge, this work demonstrates the first approach in learning multitrack mixing conventions from real-world data at the waveform level, 
-                without knowledge of the underlying mixing parameters.
+                Abstract.
             </p>
         </div>
-
-        <div class="section">
-            <h2 class="">Transformation Network</h1>
-            <hr>
-            <div class="row mb-4">
-                <div class="col-md-6 text-center">
-                    <img class="img-fluid" src="img/transform-net-detail.svg">
-                </div>
-                <div class="col-md-6">
-                    <p>The transformation network is tasked with emulating a series connection of digital audio effects. 
-                        In this case we train the transformation network to model an EQ, dynamic range compressor, and reverb. 
-                        To train this network we randomly configure the parameters of the signal chain, and process clean examples
-                        from the dataset to generate input and target pairs. 
-                        In the samples below, we shown the input signal and the target signal from the original signal chain with a number of random configurations,
-                        where EQ, compression, and reverb are all applied.  
-                        The remaining examples are the output of three trained models, TCN-10, TCN-20, and TCN-30. 
-                        All examples here come from the test set of the <a href="https://zenodo.org/record/3824876">SignalTrain LA2A Dataset</a>.
-                    </p>
-                </div>
-            </div>
           
             <table class="table table-sm text-center" style="vertical-align: middle;">
                 <tr>
