--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -43,15 +43,14 @@
           
             <table class="table table-sm text-center" style="vertical-align: middle;">
                 <tr>
-                    <th class="passage">Passage</th>
-                    <th>Input</th>
-                    <th>Target</th>
-                    <th>TCN-10</th>
-                    <th>TCN-20</th>
-                    <th>TCN-30</th>
+                    <th class="passage">Mixdown</th>
+                    <th>Reference</th>
+                    <th>Stereo Bus Mix</th>
+                    <th>Gain Mix</th>
+                    <th>Individual Bus Mix</th>
                 </tr>
                 <tr>
-                    <td class="passage">A</td>
+                    <td class="passage">Blue</td>
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/a/002-01_input_norm.mp3" type="audio/mpeg">
@@ -84,7 +83,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">B</td>
+                    <td class="passage">Desert</td>
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/b/004-00_input_norm.mp3" type="audio/mpeg">
@@ -117,7 +116,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">C</td>
+                    <td class="passage">Etc</td>
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/c/006-02_input_norm.mp3" type="audio/mpeg">
@@ -150,7 +149,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">D</td>
+                    <td class="passage">Pony</td>
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/d/012-02_input_norm.mp3" type="audio/mpeg">
@@ -183,7 +182,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="passage">E</td>
+                    <td class="passage">Saga</td>
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/e/013-03_input_norm.mp3" type="audio/mpeg">
@@ -211,39 +210,6 @@
                     <td>
                         <audio controls class="player">
                         <source src="audio/channel/e/013-03_TCN-30_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="passage">F</td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/f/015-02_input_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/f/015-02_target_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/f/015-02_TCN-10_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/f/015-02_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/f/015-02_TCN-30_norm.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
