--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -53,31 +53,25 @@
                     <td class="passage">Blue</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/a/002-01_input_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/a/002-01_target_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/a/002-01_TCN-10_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/a/002-01_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/a/002-01_TCN-30_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -86,31 +80,25 @@
                     <td class="passage">Desert</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/b/004-00_input_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/b/004-00_target_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/b/004-00_TCN-10_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/b/004-00_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/b/004-00_TCN-30_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -119,31 +107,25 @@
                     <td class="passage">Etc</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/c/006-02_input_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/c/006-02_target_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/c/006-02_TCN-10_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/c/006-02_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/c/006-02_TCN-30_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -152,31 +134,25 @@
                     <td class="passage">Pony</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/d/012-02_input_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/d/012-02_target_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/d/012-02_TCN-10_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/d/012-02_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/d/012-02_TCN-30_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -185,37 +161,31 @@
                     <td class="passage">Saga</td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/e/013-03_input_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/e/013-03_target_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/e/013-03_TCN-10_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls class="player">
-                        <source src="audio/channel/e/013-03_TCN-20_norm.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/channel/e/013-03_TCN-30_norm.mp3" type="audio/mpeg">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
             </table>
-            <p class="text-center">All listening samples have been loudness normalized to -23 dB LUFS and encoded to VBR mp3.</p>
+            <p class="text-center">All listening samples are 44.1kHz wav files.</p>
 
         </div>
 
