--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Webpage hosting audio examples.">
     <meta name="author" content="Joseph T Colonel">
-    <title>Reverse Engineering a Mix</title>
+    <title>Reverse engineering of a recording mix with differentiable digital signal processing </title>
     
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,14 +19,14 @@
     <div class="jumbotron jumbotron-fluid text-center">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="mt-5">Reverse Engineering a Mix</h1>
+            <h1 class="mt-5">Reverse engineering of a recording mix with differentiable digital signal processing </h1>
             <hr>
             <p class="lead">
                 <a href="https://www.josephtcolonel.com/">Joseph T Colonel</a>, 
-                <a href="http://www.eecs.qmul.ac.uk/~josh/">Joshua Reiss</a>, 
+                <a href="http://www.eecs.qmul.ac.uk/~josh/">Joshua Reiss</a> 
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <a href="https://scholar.google.com/citations?user=c0Y1VjwAAAAJ&hl=en" type="button" class="btn btn-secondary">Paper</a>
+                <a href="https://asa.scitation.org/doi/full/10.1121/10.0005622" type="button" class="btn btn-secondary">Paper</a>
               </div>
           </div>
         </div>
