--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -205,12 +205,8 @@
     pages = {608-619},
     year = {2021},
     doi = {10.1121/10.0005622},
-    URL = { 
-        https://doi.org/10.1121/10.0005622
-    },
-    eprint = { 
-        https://doi.org/10.1121/10.0005622
-    }
+    URL = {https://doi.org/10.1121/10.0005622},
+    eprint = {https://doi.org/10.1121/10.0005622}
     }</code>
                 </pre>
             </div>
