--- a/RevEng/index.html
+++ b/RevEng/index.html
@@ -51,33 +51,6 @@
                     <th>Individual Bus Mix</th>
                 </tr>
                 <tr>
-                    <td class="passage">Blue</td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue Reference.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue Gain.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls class="player">
-                        <source src="audio/Blue IndBus.wav" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                </tr>
-                <tr>
                     <td class="passage">Desert</td>
                     <td>
                         <audio controls class="player">
@@ -127,6 +100,33 @@
                     <td>
                         <audio controls class="player">
                         <source src="audio/Etc IndBus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="passage">Glad</td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Blue Reference.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Blue 2Bus.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Blue Gain.wav" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        </audio>
+                    </td>
+                    <td>
+                        <audio controls class="player">
+                        <source src="audio/Blue IndBus.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                         </audio>
                     </td>
